@@ -1,3 +1,8 @@
+2004-09-04  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.texi (Frequently Asked Questions): Add two examples of
+	using abbreviations to shortening Tramp file names.
+
 2004-08-31  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.texi (Frequently Asked Questions): Add item describing
